28.4.2001	XV_SIGNAL_STRENGTH <garetxe@users.sourceforge.net>

	* src/tvengxv.c: Added support for this atom, allows for automatic
	channel searching. Now let's see if the v4l.c maintainer in XFree
	accepts my patch, and the rest of the world sees this too :-)

27.4.2001	TVeng thread-safe <garetxe@users.sourceforge.net>

	* src/tveng.c: Added a per-device mutex, made tveng.c lock,
	unlock it as necessary. Rewrote some common code as #macros.

25.4.2001	--command switch <garetxe@users.sourceforge.net>

	* src/remote.c, src/main.c: Added --command line switch, currently
	just "set_channel". Use with 'zapping -c "set_channel BBC"'

24.4.2001	trigger gui <garetxe@users.sourceforge.net>

	* zvbi.c, properties, .glade: Started trigger gui.
	* eacem_icon, atvef_icon: Moved to pixmaps. 

7.04.2001	mpeg plugin <garetxe@users.sourceforge.net>

	* rte: rte_stop closes properly, buffers used for push are
	send_empty'ed, lots of fixes and tuning. Removed rgb support, it
	was nonfunctional.
	* fifos: Proper refcounting.
	* plugins/mpeg/: Encodes, needs a lot of work though.

5.04.2001	libvbi, help <mschimek@users.sourceforge.net>

	* Finished trigger rewrite.
	* Some work in /help.

3.04.2001	overlay+osd fixes <garetxe@users.sourceforge.net>

	* overlay, tveng, osd: Made them play nice together under V4L[12].
	* src/tveng: Print more verbose messages if no DGA present.
	* src/tvengxv.c: Made it work without DGA.
	* src/osd.c, fullscreen: Centered subtitles in fullscreen even if
	VidMode changed.

2.04.2001	accelerators <garetxe@users.sourceforge.net>

	* controls: Added accelerators for hiding/showing menu bars
	(Ctrl+H), control box (Ctrl+C).
	* es.po: Updated.
	* src/ttxview.c: Added TTX subtitles selection to the popup menu.

1.04.2001	screenshot gladefied <garetxe@users.sourceforge.net>

	* plugins/screenshot: uses libglade now, added accelator for saving
	(Ctrl+s).
	* src/capture.c: send_event = False. Appears to be faster in some
	setups.
